# wallpaper-scene-renderer

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Image.hpp  SceneWallpaper.cpp  SceneWallpaper.hpp  SceneWallpaperSurface.hpp  SpecTexs.hpp  SpriteAnimation.hpp  WPDynamicValue.cpp  WPDynamicValue.hpp  WPImageAlignment.hpp  WPJson.cpp  WPJson.hpp  WPMdlParser.cpp  WPMdlParser.hpp  WPNodeTransformResolver.cpp  WPNodeTransformResolver.hpp  WPParticleParser.cpp  WPPkgFs.cpp  WPPropertyAnimation.cpp  WPPropertyAnimation.hpp  WPPuppet.cpp  WPPuppet.hpp  WPSceneParser.cpp  WPSceneParser.hpp  WPSceneScriptHost.cpp  WPSceneScriptHost.hpp  WPSceneScriptMedia.cpp  WPSceneScriptMedia.hpp  WPScriptRuntime.cpp  WPScriptRuntime.hpp  WPShaderParser.cpp  WPShaderParser.hpp  WPShaderValueUpdater.cpp  WPShaderValueUpdater.hpp  WPSoundParser.cpp  WPSoundParser.hpp  WPSyntheticImageParser.cpp  WPSyntheticImageParser.hpp  WPTexImageParser.cpp  WPTexImageParser.hpp  (+5 more)
src/Audio/: SoundManager.cpp  miniaudio-wrapper.hpp
src/Audio/include/Audio/: SoundManager.h
src/Fs/include/Fs/: LimitedBinaryStream.h  VFS.h
src/Interface/: IShaderValueUpdater.h
src/Particle/: CMakeLists.txt  ParticleEmitter.cpp  ParticleSystem.cpp  WPParticleRawGener.cpp
src/Particle/include/Particle/: Particle.h  ParticleEmitter.h  ParticleModify.h  ParticleSystem.h
src/RenderGraph/: RenderGraph.cpp
src/RenderGraph/include/RenderGraph/: PassNode.hpp  RenderGraph.hpp
src/Scene/: CMakeLists.txt  Scene.cpp  SceneCamera.cpp  SceneImageEffectLayer.cpp  SceneNode.cpp  SceneVertexArray.cpp
src/Scene/include/Scene/: Scene.h  SceneCamera.h  SceneImageEffectLayer.h  SceneLight.hpp  SceneMaterial.h  SceneNode.h  SceneRenderTarget.h  SceneTextPrimitive.h  SceneTexture.h  SceneVertexArray.h
src/Swapchain/: ExSwapchain.hpp  TripleSwapchain.hpp
src/Utils/: Logging.cpp
src/Utils/include/Utils/: Eigen.h  Logging.h
src/Vulkan/: CMakeLists.txt  Device.cpp  GraphicsPipeline.cpp  Instance.cpp  Parameters.cpp  Shader.cpp  StagingBuffer.cpp  TextureCache.cpp  VideoTextureCache.cpp  vulkan_wrapper.cpp
src/Vulkan/include/Vulkan/: Device.hpp  GraphicsPipeline.hpp  Instance.hpp  Parameters.hpp  Shader.hpp  ShaderComp.hpp  StagingBuffer.hpp  TextureCache.hpp  VideoTextureCache.hpp  VulkanExSwapchain.hpp
src/Vulkan/include/vvk/: handle.hpp  vma_wrapper.hpp  vulkan_wrapper.hpp
src/VulkanRender/: AllPasses.hpp  CMakeLists.txt  ClearPass.cpp  ClearPass.hpp  CopyPass.cpp  CopyPass.hpp  CustomShaderPass.cpp  CustomShaderPass.hpp  FinPass.cpp  FinPass.hpp  PrePass.cpp  PrePass.hpp  Resource.hpp  SceneToRenderGraph.cpp  TextPass.cpp  TextPass.hpp  VulkanPass.cpp  VulkanPass.hpp  VulkanRender.cpp
src/VulkanRender/include/VulkanRender/: OffscreenFrameReleaseCallback.hpp  SceneToRenderGraph.hpp  VulkanRender.hpp
src/wpscene/: WPEffect.cpp  WPEffect.h  WPImageObject.cpp  WPImageObject.h  WPLightObject.cpp  WPLightObject.hpp  WPMaterial.cpp  WPMaterial.h  WPParticleObject.cpp  WPParticleObject.h  WPScene.cpp  WPScene.h  WPSoundObject.h  WPTextObject.h
wpdoc/: runtime-visibility-residency.md  scenejson.md  texture.md
